# ocr

./: .gitignore  .travis.yml  AUTHORS  CNAME  Makefile  README  README.md  README2-GUI  Vagrantfile  configure.ac  index.html  nn.saved  run_test.sh
css/: grayscale.css
docs/1_report/: 1_report.tex
docs/2_report/: 2_report.tex  type_nn.c  type_segmentation.c  type_structure.c  xor.saved
docs/Soutenance1/: soutenance1.tex
not_build/: benchmark.c  lines_detection.c  minunit.h  ocr.ggo  test.c  test.h
not_build/cmdline/: cmdline.c  cmdline.h  main.h  ocr.ggo
not_build/gui/: .txt  gui  gui.glade  gui.glade~  main.c  main.h  makefile
not_build/neural_network/: connection.c  main.c  network.c
not_build/testing/test_global/: Makefile  main.c  main.h
not_build/testing/test_learn/: Makefile  main.c  main.h
not_build/testing/test_nn/: testing.c
src/: .main.c.swp  Makefile.am  benchmark.c  benchmark.h  cmdline.c  cmdline.h  detection.h  gui.glade  main.c  main.h  ocr.ggo  otsu.c  otsu.h  preprocessing.c  preprocessing.h  stb_image.c  stb_image.h  stb_image_ext.c  stb_image_ext.h  test.c  test.h
src/neural_network/: main.c  neuron.h
src/nn/: Makefile  Makefile.am  connection.c  connection.h  main.c  main.h  network.c  network.h  neuron.c  neuron.h  nn.c  nn.h  pattern.c  pattern.h  testing.c  xor.c  xor.h
src/nn2/: Makefile  nn.c  nn.h  xor.c  xor.h
src/proc/: Makefile.am  detection.c  detection.h  filter.c  filter.h  list.c  list.h  preprocessing.c  preprocessing.h  rotation.c  rotation.h  xy-cut.c  xy-cut.h
src/stb_image/: Makefile.am  stb_image.h  stb_image_ext.c  stb_image_ext.h  stb_image_resize.c  stb_image_resize.h
training/lower/C/: Thumbs.db
training/lower/D/: Thumbs.db
training/lower/E/: Thumbs.db
training/lower/F/: Thumbs.db
training/lower/G/: Thumbs.db
training/lower/H/: Thumbs.db
training/lower/I/: Thumbs.db
training/lower/J/: Thumbs.db
training/lower/K/: Thumbs.db
training/upper/A/: Thumbs.db
(+2 files in other folders)
